# lis-personal-assistant

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml  user-stories.md
.github/workflows/: deploy-pages.yml
config/: app.yaml  notion.yaml  publish.yaml
outputs/communications/: 2026-04-07-email-reply.json
outputs/lectures/: 2026-04-07-advanced-data-science-lecture-to-page.json  2026-04-07-advanced-data-science-lecture-to-page.md  2026-04-07-ai-and-ml-session-01.md  2026-04-07-decision-trees-lecture-to-page.json  2026-04-07-decision-trees-lecture-to-page.md
outputs/meetings/: 2026-04-07-ai-and-collective-intelligence-meeting-to-actions.json  2026-04-07-meeting-to-actions.json  2026-04-07-meeting-to-actions.md
publish/: README.md  index.md
publish/pages/: week-6-advanced-decision-tree-concepts-and-hyperparameter-tuning.md
skills/: email_reply.yaml  lecture_to_page.yaml  meeting_to_actions.yaml  notion_sync.yaml  quick_capture.yaml  weekly_comm.yaml
src/assistant/: __init__.py  api.py  cli.py  llm.py  notion_sync.py  publisher.py  repo.py  retrieval.py  runner.py  schemas.py  settings.py  templates.py
templates/outputs/: email_reply.md  lecture.md  meeting.md  quick_capture.md  weekly_update.md
templates/prompts/: email_reply.j2  lecture_to_page.j2  meeting_to_actions.j2  quick_capture.j2  weekly_comm.j2
tests/fixtures/: sample_assessment_brief.md  sample_lecture_transcript.md  sample_meeting_transcript.md  sample_module_brief.md  sample_student_email.md
tests/unit/: test_api.py  test_notion_sync.py  test_publisher.py  test_repo.py  (+4 more)
(+5 files in other folders)
